[tool.poetry]
name = "changetext"
version = "0.1.0"
description = ""
authors = ["insolor <insolor@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pymorphy3 = "^2.0.4"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
ruff = "^0.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
select = ["E", "F", "UP"]
ignore = ["UP015"]
unfixable = ["F401"]
target-version = "py38"
