[project]
name = "changetext"
version = "0.1.0"
description = ""
authors = [{ name = "insolor", email = "insolor@gmail.com" }]
requires-python = ">=3.9"
license = "MIT"
dependencies = ["pymorphy3>=2.0.4,<3"]

[dependency-groups]
dev = [
    "pytest>=8.4.1,<9",
    "pytest-cov>=6.2.1,<7",
    "ruff>=0.12.7,<0.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
select = ["E", "F", "UP"]
ignore = ["UP015"]
unfixable = ["F401"]
target-version = "py38"
