[project]
name = "changetext"
version = "0.1.0"
description = ""
authors = [{ name = "insolor", email = "insolor@gmail.com" }]
requires-python = ">=3.12"
license = "MIT"
dependencies = ["pymorphy3>=2.0.4,<3"]

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10",
    "pytest-cov>=6.2.1,<8",
    "ruff>=0.15.12,<0.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
select = ["E", "F", "UP"]
ignore = ["UP015"]
unfixable = ["F401"]
target-version = "py38"
